Code quality update
Changed comments and endpoints